# SVG_Generator_Modular

./: LICENSE  README.md  pyproject.toml
examples/: basic_svg_generation.py
src/svg_generator/: __init__.py  cli.py  config.py
src/svg_generator/parsing/: __init__.py  semantic_parser.py
src/svg_generator/scene/: __init__.py  scene_orchestrator.py
src/svg_generator/style/: __init__.py  style_profiles.py
src/svg_generator/svg/: __init__.py  generator.py  gradients.py  patterns.py  shapes.py
src/svg_generator/svg/renderers/: __init__.py  chord_map_renderer.py  data_viz_renderer.py  grid3d_renderer.py  text_renderer.py
src/svg_generator/utils/: __init__.py  colors.py  compliance.py  geometry.py  math_utils.py  optimizer.py  sanitize.py  text_utils.py
